--- a/bin/dis-card2.html
+++ b/bin/dis-card2.html
@@ -4,8 +4,8 @@
 <html>
 	<head>
 		<title>DIS-CARD II</title>
-		<link rel="shortcut icon" type="image/png" href="graphics/spade.png">
-		<link rel="stylesheet" href="bin/dis-card.css">
+		<link rel="shortcut icon" type="image/png" href="../graphics/spade.png">
+		<link rel="stylesheet" href="dis-card.css">
 	</head>
 
 	<body>
@@ -17,7 +17,7 @@
 				<!--ONLY CELL-->
 				<tr><td class="centerBottom">
 					<!--ATTRIBUTIONS-->
-					<img src="graphics/InclusibleGames.png" width="100%" alt="Inclusible Games logo"> <!--LOGO-->
+					<img src="../graphics/InclusibleGames.png" width="100%" alt="Inclusible Games logo"> <!--LOGO-->
 					<span class="smallest"><p>Copyright 2021 Diane Guendel
 						<br>Programming credit Olivia Brennan</p></span>
 				</td></tr>
@@ -35,7 +35,7 @@
 					<div class="toFade" id="diamondDIV"> <!--ALL CONTENTS IN DIV: THE DIV IS WHAT FADES OUT-->
 
 					Any <span class="emphasis">diamond</span> <!--TITLE-->
-					<br><img src="graphics/diamond.png" width="33%" alt="diamond"> <!--DIAMOND IMAGE-->
+					<br><img src="../graphics/diamond.png" width="33%" alt="diamond"> <!--DIAMOND IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="diamond1" name="diamond1" onclick="visibility('diamond', 2)">
@@ -57,7 +57,7 @@
 					<div class="toFade" id="heartDIV">
 
 					Any <span class="emphasis">heart</span> <!--TITLE-->
-					<br><img src="graphics/heart.png" width="33%" alt="heart"> <!--HEART IMAGE-->
+					<br><img src="../graphics/heart.png" width="33%" alt="heart"> <!--HEART IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="heart1" name="heart1" onclick="visibility('heart', 2)">
@@ -149,8 +149,8 @@
 					<div class="toFade" id="redDIV">
 
 					Any <span class="emphasis">red</span> card <!--TITLE-->
-					<br><img src="graphics/diamond.png" width="33%" alt="diamond"> <!--DIAMOND IMAGE-->
-						<img src="graphics/heart.png" width="33%" alt="heart"> <!--HEART IMAGE-->
+					<br><img src="../graphics/diamond.png" width="33%" alt="diamond"> <!--DIAMOND IMAGE-->
+						<img src="../graphics/heart.png" width="33%" alt="heart"> <!--HEART IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="red1" name="red1" onclick="visibility('red', 2)">
@@ -207,7 +207,7 @@
 					<div class="toFade" id="clubDIV">
 
 					Any <span class="emphasis">club</span> <!--TITLE-->
-					<br><img src="graphics/club.png" width="33%" alt="club"> <!--CLUB IMAGE-->
+					<br><img src="../graphics/club.png" width="33%" alt="club"> <!--CLUB IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="club1" name="club1" onclick="visibility('club', 2)">
@@ -229,7 +229,7 @@
 					<div class="toFade" id="spadeDIV">
 
 					Any <span class="emphasis">spade</span> <!--TITLE-->
-					<br><img src="graphics/spade.png" width="33%" alt="spade"> <!--SPADE IMAGE-->
+					<br><img src="../graphics/spade.png" width="33%" alt="spade"> <!--SPADE IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="spade1" name="spade1" onclick="visibility('spade', 2)">
@@ -259,8 +259,8 @@
 						<span class="numbersR">Q</span>
 						<span class="numbersB">K</span>
 
-					<br><img src="graphics/king_hearts.png" width="20%" alt="King of Hearts"> <!--CARD IMAGE-->
-						&nbsp;<img src="graphics/queen_clubs_tilt.png" width="22%" alt="Queen of Clubs"> <!--CARD IMAGE-->
+					<br><img src="../graphics/king_hearts.png" width="20%" alt="King of Hearts"> <!--CARD IMAGE-->
+						&nbsp;<img src="../graphics/queen_clubs_tilt.png" width="22%" alt="Queen of Clubs"> <!--CARD IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="face1" name="face1" onclick="visibility('face', 2)">
@@ -294,8 +294,8 @@
 						<span class="numbersB">9</span>
 						<span class="numbersR">10</span>
 
-					<br><img src="graphics/ace_spades_tilt.png" width="22%" alt="Ace of Spades"> <!--CARD IMAGE-->
-						&nbsp;<img src="graphics/four_diamonds.png" width="20%" alt="Four of Diamonds"> <!--CARD IMAGE-->
+					<br><img src="../graphics/ace_spades_tilt.png" width="22%" alt="Ace of Spades"> <!--CARD IMAGE-->
+						&nbsp;<img src="../graphics/four_diamonds.png" width="20%" alt="Four of Diamonds"> <!--CARD IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="number1" name="number1" onclick="visibility('number', 2)">
@@ -347,8 +347,8 @@
 					<div class="toFade" id="blackDIV">
 
 					Any <span class="emphasis">black</span> card <!--TITLE-->
-					<br><img src="graphics/club.png" width="33%" alt="club"> <!--CLUB IMAGE-->
-						<img src="graphics/spade.png" width="33%" alt="spade"> <!--SPADE IMAGE-->
+					<br><img src="../graphics/club.png" width="33%" alt="club"> <!--CLUB IMAGE-->
+						<img src="../graphics/spade.png" width="33%" alt="spade"> <!--SPADE IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="black1" name="black1" onclick="visibility('black', 2)">
@@ -373,11 +373,11 @@
 		<center>
 			<!--TITLE (ALTERNATING COLORS)-->
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
-				<br><span class="title1"><a href="index.html">II</a></span></p>
+				<br><span class="title1"><a href="../index.html">II</a></span></p>
 			<!--LOGO (CARDS)-->
-			<p><img src="graphics/cards_array.png" width="15%" alt="DIS-CARD Logo"></p>
+			<p><img src="../graphics/cards_array.png" width="15%" alt="DIS-CARD Logo"></p>
 			<!--CENTER BUTTONS-->
-			<p><button type="button" class="rules" onclick="window.open('documents/DIS-CARD II Instructions.pdf')">How to play</button><br>
+			<p><button type="button" class="rules" onclick="window.open('../documents/DIS-CARD II Instructions.pdf')">How to play</button><br>
 				<button type="button" onClick="playAgain(2)">Play again</button>
 				<button type="button" onClick="keepScore()">Keep score</button></p>
 		</center>
@@ -436,7 +436,7 @@
 			</span>
 		</div>
 
-		<script src="bin/dis-card.js"></script>
+		<script src="dis-card.js"></script>
 		<script>hideResets(2);</script>
 	</body>
 </html>
