--- a/bin/dis-card3.html
+++ b/bin/dis-card3.html
@@ -4,8 +4,8 @@
 <html>
 	<head>
 		<title>DIS-CARD III</title>
-		<link rel="shortcut icon" type="image/png" href="graphics/club.png">
-		<link rel="stylesheet" href="bin/dis-card.css">
+		<link rel="shortcut icon" type="image/png" href="../graphics/club.png">
+		<link rel="stylesheet" href="dis-card.css">
 	</head>
 
 	<body>
@@ -17,7 +17,7 @@
 				<!--ONLY CELL-->
 				<tr><td class="centerBottom">
 					<!--ATTRIBUTIONS-->
-					<img src="graphics/InclusibleGames.png" width="100%" alt="Inclusible Games logo"> <!--LOGO-->
+					<img src="../graphics/InclusibleGames.png" width="100%" alt="Inclusible Games logo"> <!--LOGO-->
 					<span class="smallest"><p>Copyright 2021 Diane Guendel
 						<br>Programming credit Olivia Brennan</p></span>
 				</td></tr>
@@ -38,16 +38,16 @@
 						<br><span class="small">(same rank)</span> <!--TITLE END-->
 					<br><span class="numbersB">4 4</span>
 						<span class="numbersR">4 4</span>&emsp;&emsp;&emsp;
-					<br><img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">&emsp;&emsp;&emsp;
+					<br><img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">&emsp;&emsp;&emsp;
 					<br>&emsp;&emsp;&emsp;<span class="numbersB">J J</span>
 						<span class="numbersR">J J</span>
-					<br>&emsp;&emsp;&emsp;<img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">
+					<br>&emsp;&emsp;&emsp;<img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="kind41" name="kind41" class="smaller" onclick="visibility('kind4', 2)">
@@ -72,14 +72,14 @@
 						<br><span class="small">(same rank)</span> <!--TITLE END-->
 					<br><span class="numbersB">8</span>
 						<span class="numbersR">8 8</span>&emsp;&emsp;&emsp;
-					<br><img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">&emsp;&emsp;&emsp;
+					<br><img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">&emsp;&emsp;&emsp;
 					<br>&emsp;&emsp;&emsp;<span class="numbersR">3</span>
 						<span class="numbersB">3 3</span>
-					<br>&emsp;&emsp;&emsp;<img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
-						<img src="graphics/spade.png" alt="spade" class="icon">
+					<br>&emsp;&emsp;&emsp;<img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/spade.png" alt="spade" class="icon">
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="kind31" name="kind31" class="smaller" onclick="visibility('kind3', 2)">
@@ -108,10 +108,10 @@
 					<br><span class="numbersB">2</span>
 						<span class="numbersR">2&emsp;&emsp;&ensp;9</span>
 						<span class="numbersB">9</span>
-					<br><img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">&emsp;&emsp;&ensp;
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
+					<br><img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">&emsp;&emsp;&ensp;
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
 
 					<!--BOX 1-->
 					<br><br><input type="checkbox" id="kind21" name="kind21" class="smaller" onclick="visibility('kind2', 2)">
@@ -138,8 +138,8 @@
 						<span class="numbersR">Q</span>
 						<span class="numbersB">K</span>
 
-					<br><img src="graphics/king_hearts.png" width="20%" alt="King of Hearts"> <!--CARD IMAGE-->
-						&nbsp;<img src="graphics/queen_clubs_tilt.png" width="22%" alt="Queen of Clubs"> <!--CARD IMAGE-->
+					<br><img src="../graphics/king_hearts.png" width="20%" alt="King of Hearts"> <!--CARD IMAGE-->
+						&nbsp;<img src="../graphics/queen_clubs_tilt.png" width="22%" alt="Queen of Clubs"> <!--CARD IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="face1" name="face1" class="smaller" onclick="visibility('face', 2)">
@@ -237,13 +237,13 @@
 					<span class="bold">3</span> <span class="emphasis">in a row</span>
 						<br><span class="small">(same suit)</span> <!--TITLE END-->
 					<br><span class="numbersR">A 2 3</span>&emsp;&emsp;&emsp;
-					<br><img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">&emsp;&emsp;&emsp;
+					<br><img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">&emsp;&emsp;&emsp;
 					<br>&emsp;&emsp;&emsp;<span class="numbersB">7 8 9</span>
-					<br>&emsp;&emsp;&emsp;<img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/spade.png" alt="spade" class="icon">
+					<br>&emsp;&emsp;&emsp;<img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/spade.png" alt="spade" class="icon">
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="row31" name="row31" class="smaller" onclick="visibility('row3', 2)">
@@ -267,15 +267,15 @@
 					<span class="bold">4</span> <span class="emphasis">in a row</span>
 						<br><span class="small">(same suit)</span> <!--TITLE END-->
 					<br><span class="numbersR">4 5 6 7</span>&emsp;&emsp;&emsp;
-					<br><img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">&emsp;&emsp;&emsp;
+					<br><img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">&emsp;&emsp;&emsp;
 					<br>&emsp;&emsp;&emsp;<span class="numbersB">J Q K A</span>
-					<br>&emsp;&emsp;&emsp;<img src="graphics/club.png" width="20px" alt="club" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
+					<br>&emsp;&emsp;&emsp;<img src="../graphics/club.png" width="20px" alt="club" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="row41" name="row41" class="smaller" onclick="visibility('row4', 2)">
@@ -300,15 +300,15 @@
 					<div class="toFade" id="redDIV">
 
 					Any <span class="bold">2</span> <span class="emphasis">red</span> cards<br>
-						<img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/heart.png" alt="heart" class="icon">&emsp;
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">&emsp;
-						<img src="graphics/heart.png" alt="heart" class="icon">
-						<img src="graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/heart.png" alt="heart" class="icon">&emsp;
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">&emsp;
+						<img src="../graphics/heart.png" alt="heart" class="icon">
+						<img src="../graphics/diamond_cropped.png" alt="diamond" class="icon">
 
-					<br><img src="graphics/four_diamonds.png" width="20%" alt="Four of Diamonds"> <!--CARD IMAGE-->
-						&nbsp;<img src="graphics/queen_hearts_tilt.png" width="22%" alt="Queen of Hearts"> <!--CARD IMAGE-->
+					<br><img src="../graphics/four_diamonds.png" width="20%" alt="Four of Diamonds"> <!--CARD IMAGE-->
+						&nbsp;<img src="../graphics/queen_hearts_tilt.png" width="22%" alt="Queen of Hearts"> <!--CARD IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="red1" name="red1" class="smaller" onclick="visibility('red', 2)">
@@ -330,15 +330,15 @@
 					<div class="toFade" id="blackDIV">
 
 					Any <span class="bold">2</span> <span class="emphasis">black</span> cards<br>
-						<img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/spade.png" alt="spade" class="icon">&emsp;
-						<img src="graphics/club.png" alt="club" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">&emsp;
-						<img src="graphics/spade.png" alt="spade" class="icon">
-						<img src="graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/spade.png" alt="spade" class="icon">&emsp;
+						<img src="../graphics/club.png" alt="club" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">&emsp;
+						<img src="../graphics/spade.png" alt="spade" class="icon">
+						<img src="../graphics/club.png" alt="club" class="icon">
 
-					<br><img src="graphics/ace_spades_tilt.png" width="22%" alt="Ace of Spades"> <!--CARD IMAGE-->
-						&nbsp;<img src="graphics/queen_clubs.png" width="20%" alt="Queen of Clubs"> <!--CARD IMAGE-->
+					<br><img src="../graphics/ace_spades_tilt.png" width="22%" alt="Ace of Spades"> <!--CARD IMAGE-->
+						&nbsp;<img src="../graphics/queen_clubs.png" width="20%" alt="Queen of Clubs"> <!--CARD IMAGE-->
 
 					<!--BOX 1-->
 					<br><input type="checkbox" id="black1" name="black1" class="smaller" onclick="visibility('black', 2)">
@@ -423,9 +423,9 @@
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
 				<br><span class="title1"><a href="index.html">III</a></span></p>
 			<!--LOGO (CARDS)-->
-			<p><img src="graphics/cards_array.png" width="15%" alt="DIS-CARD Logo"></p>
+			<p><img src="../graphics/cards_array.png" width="15%" alt="DIS-CARD Logo"></p>
 			<!--CENTER BUTTONS-->
-			<p><button type="button" class="rules" onclick="window.open('documents/DIS-CARD III Instructions.pdf')">How to play</button><br>
+			<p><button type="button" class="rules" onclick="window.open('../documents/DIS-CARD III Instructions.pdf')">How to play</button><br>
 				<button type="button" onClick="playAgain(3)">Play again</button>
 				<button type="button" onClick="keepScore()">Keep score</button></p>
 		</center>
@@ -484,7 +484,7 @@
 			</span>
 		</div>
 
-		<script src="bin/dis-card.js"></script>
+		<script src="dis-card.js"></script>
 		<script>hideResets(3);</script>
 	</body>
 </html>
