--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 		<center>
 			<!--FIRST LINK-->
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
-				<br><span class="title1"><a href="dis-card1.html">I</a></span></p>
+				<br><span class="title1"><a href="bin/dis-card1.html">I</a></span></p>
 				<br><br>
 
 			<!--SECOND LINK-->
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
-				<br><span class="title1"><a href="dis-card2.html">II</a></span></p>
+				<br><span class="title1"><a href="bin/dis-card2.html">II</a></span></p>
 				<br><br>
 
 			<!--THIRD LINK-->
 			<p><span class="title1">D</span><span class="title2">I</span><span class="title1">S</span><span class="title2">-</span><span class="title1">C</span><span class="title2">A</span><span class="title1">R</span><span class="title2">D</span>
-				<br><span class="title1"><a href="dis-card3.html">III</a></span></p>
+				<br><span class="title1"><a href="bin/dis-card3.html">III</a></span></p>
 				<br><br><br><br><br><br><br>
 		</center>
 
